templates/app.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: sample-enmasse-rest
  labels:
    name: sample-enmasse-rest
    app: enmasse-app-template
spec:
  replicas: 1
  selector:
    name:  sample-enmasse-rest
  strategy:
    type: Rolling
    rollingParams:
  template:
    metadata:
      labels:
        name: sample-enmasse-rest
    spec:
      containers:
      -
        image: "docker.io/odranoel/enmassepy:latest"
        imagePullPolicy: Always
        name: my-enmasse-rest
        ports:
          - 
            containerPort: 9090
            protocol: TCP
          - 
            containerPort: 9191
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 9090
            scheme: HTTP
  triggers:
  - type: ConfigChange
