templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-enmasse-rest
  app: enmasse-app-template   
spec:
  selector:                  
    name: sample-enmasse-rest
  ports:
  -
    nodePort: 0
    port: 9090               
    protocol: TCP
    targetPort: 9090
