templates/route.yml
apiVersion: v1
kind: Route
metadata:
  name: sample-enmasse-rest
  app: enmasse-app-template
spec:
  to:
    kind: Service
    name: sample-enmasse-rest
